--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 
-axum = { version = "0.6.1", features = ["headers", "macros"] }
+axum = { version = "0.7", features = ["macros"] }
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0"
 serde_with = "3.0.0"
